Swagger modificado
